Fix missing border

--- a/src/pages/settings.css
+++ b/src/pages/settings.css
@@ -28,8 +28,7 @@
   opacity: 1;
 }
 #settings-container ul li .current.is-current + .avatar {
-  border-color: var(--green-color);
-  border-width: 2px;
+  box-shadow: 0 0 0 1.5px var(--green-color);
 }
 #settings-container ul li > div {
   flex-grow: 1;
